[project]
name = "xarray-datatree"
description = "Hierarchical tree-like data structures for xarray"
readme = "README.md"
authors = [
    {name = "Thomas Nicholas", email = "thomas.nicholas@columbia.edu"}
]
license = {text = "Apache-2"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "xarray >=2022.6.0",
]
dynamic = ["version"]

[project.urls]
Home = "https://github.com/xarray-contrib/datatree"
Documentation = "https://xarray-datatree.readthedocs.io/en/stable/"

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "setuptools_scm[toml]>=7.0",
    "check-manifest"
]

[tool.setuptools_scm]
write_to = "datatree/_version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''

[tool.setuptools.packages.find]
exclude = ["docs", "tests", "tests.*", "docs.*"]

[tool.setuptools.package-data]
datatree = ["py.typed"]

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "datatree"

[mypy]
files = "datatree/**/*.py"
show_error_codes = true
