[metadata]
name = xarray-datatree
description = Hierarchical tree-like data structures for xarray
long_description_content_type=text/markdown
long_description = file: README.md
url = https://github.com/xarray-contrib/datatree
author = Thomas Nicholas
author_email = thomas.nicholas@columbia.edu
license = Apache
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
install_requires =
    xarray >=2022.05.0.dev0

[options.packages.find]
exclude =
    docs
    tests
    tests.*
    docs.*

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
    doc

[isort]
profile = black
skip_gitignore = true
float_to_top = true
default_section = THIRDPARTY
known_first_party = datatree

[mypy]
files = datatree/**/*.py
show_error_codes = True
