[metadata]
name = xarray-datatree
description = Hierarchical tree-like data structures for xarray
long_description_content_type=text/markdown
long_description = file: README.md
url = https://github.com/xarray-contrib/datatree
author = Thomas Nicholas
author_email = thomas.nicholas@columbia.edu
license = Apache
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.9
install_requires =
    xarray >=2022.6.0

[options.packages.find]
exclude =
    docs
    tests
    tests.*
    docs.*

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    # module level import not at top of file
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    .eggs
    doc

[isort]
profile = black
skip_gitignore = true
float_to_top = true
default_section = THIRDPARTY
known_first_party = datatree

[mypy]
files = datatree/**/*.py
show_error_codes = True
